<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/common_bg"
    >

    <TextView
        android:id="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        />

    <TextView
        android:id="@+id/account_balance"
        style="@style/text_13_sp"
        android:textColor="@color/light_black"
        android:text="@string/my_account_balance"
        android:layout_marginTop="@dimen/common_big_distance"
        android:layout_marginLeft="@dimen/common_distance"
        />
    <TextView
        android:id="@+id/account_balance_value"
        style="@style/text_13_sp"
        android:textColor="@color/common_red"
        android:text="￥0"
        android:layout_marginTop="@dimen/common_big_distance"
        android:layout_marginLeft="@dimen/common_distance"
        android:layout_below="@id/account_balance"
        />

    <TextView
        android:id="@+id/account_out"
        style="@style/border_light_blue"
        android:textColor="@color/light_black"
        android:text="@string/my_account_out"
        android:layout_marginTop="@dimen/common_big_distance"
        android:layout_marginRight="@dimen/common_distance"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/my_account_btn_width"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/account_in"
        style="@style/border_light_blue"
        android:textColor="@color/light_black"
        android:text="@string/my_account_in"
        android:layout_marginTop="@dimen/common_big_distance"
        android:layout_marginRight="@dimen/common_distance"
        android:layout_toLeftOf="@id/account_out"
        android:layout_width="@dimen/my_account_btn_width"
        android:gravity="center"
        />


    <TextView
        android:id="@+id/account_pay_limit_value"
        style="@style/text_13_sp"
        android:textColor="@color/common_red"
        android:text="￥0"
        android:layout_marginTop="@dimen/common_big_distance"
        android:layout_marginRight="@dimen/common_distance"
        android:layout_below="@id/account_out"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:id="@+id/account_pay_limit_label"
        style="@style/text_13_sp"
        android:textColor="@color/light_black"
        android:text="@string/my_account_pay_limit"
        android:layout_marginRight="@dimen/common_distance"
        android:layout_toLeftOf="@id/account_pay_limit_value"
        android:layout_alignTop="@id/account_pay_limit_value"
        />
    <TextView
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_below="@id/account_pay_limit_value"
        android:layout_marginTop="@dimen/common_distance"
        />
    <LinearLayout
        android:id="@+id/btn_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_line"
        android:orientation="horizontal"
        android:background="@color/common_bg"
        >
        <TextView
            android:id="@+id/set_limit"
            style="@style/border_light_blue"
            android:textColor="@color/light_green"
            android:text="@string/my_account_set_limit"
            android:layout_marginTop="@dimen/common_big_distance"
            android:layout_marginRight="@dimen/common_distance"
            android:layout_marginBottom="@dimen/common_big_distance"
            android:layout_marginLeft="@dimen/common_distance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="40dp"
            />
        <TextView
            android:id="@+id/set_pwd"
            style="@style/btn_light_blue"
            android:textColor="@color/white"
            android:text="@string/my_account_set_pwd"
            android:layout_marginTop="@dimen/common_big_distance"
            android:layout_marginRight="@dimen/common_distance"
            android:layout_marginBottom="@dimen/common_big_distance"
            android:layout_marginLeft="@dimen/common_distance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="40dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_below="@id/btn_ll"
        />
    <RelativeLayout
        android:id="@+id/rl_account_his"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        >
        <TextView
            android:id="@+id/account_his_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_account_history"
            android:layout_marginTop="@dimen/common_big_distance"
            android:layout_marginBottom="@dimen/common_big_distance"
            android:layout_marginLeft="@dimen/common_distance"
            />

        <TextView
            android:id="@+id/account_his_label_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"
            android:layout_below="@id/account_his_label"
            />
    </RelativeLayout>
    <ListView
        android:id="@+id/account_his_list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/common_distance"
        android:layout_marginRight="@dimen/common_distance"
        android:divider="@color/line"
        android:layout_below="@id/rl_account_his"
        android:scrollbars="none"
        >

    </ListView>

</RelativeLayout>